--- a/templates/kontakt.html
+++ b/templates/kontakt.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% import "macros/jsonld.html" as jsonld %}
+
+{% block head_extra %}
+{{ jsonld::breadcrumb(title=page.title, url=page.permalink, lang=lang) }}
+{% endblock %}
 
 {% block content %}
 <article>
@@ -21,17 +26,17 @@
 
       <div>
         <label for="name">{{ trans(key="label_name", lang=lang) }}</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" required autocomplete="name" aria-required="true">
       </div>
 
       <div>
         <label for="email">{{ trans(key="label_email", lang=lang) }}</label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" required autocomplete="email" aria-required="true">
       </div>
 
       <div>
         <label for="message">{{ trans(key="label_message", lang=lang) }}</label>
-        <textarea id="message" name="message" required></textarea>
+        <textarea id="message" name="message" required aria-required="true"></textarea>
       </div>
 
       <div>
