--- a/templates/page.html
+++ b/templates/page.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+{% import "macros/jsonld.html" as jsonld %}
+
+{% block head_extra %}
+{{ jsonld::breadcrumb(title=page.title, url=page.permalink, lang=lang) }}
+{% endblock %}
 
 {% block content %}
 <article>
