--- a/templates/section.html
+++ b/templates/section.html
@@ -11,10 +11,10 @@
     </div>
   </header>
 
-  <div class="container">
+  <div class="container" role="list" aria-label="{{ section.title }}">
     {% if section.pages | length > 0 %}
       {% for page in section.pages %}
-      <div>
+      <div role="listitem">
         <a href="{{ page.permalink }}">
           <h2>{{ page.title }}</h2>
           {% if page.date %}<p>{{ page.date | date(format="%d.%m.%Y") }}</p>{% endif %}
