--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -61,6 +61,20 @@
   scroll-snap-align: start;
 }
 
+.hero__mesh {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 0;
+}
+
+.hero__display {
+  position: relative;
+  z-index: 1;
+}
+
 .hero__big {
   font-family: 'Clash Display', sans-serif;
   font-weight: 700;
